# infera

./: .gitignore  .python-version  Cargo.toml  README.md  example.scm  kb.scm  pyproject.toml  requirements.txt  test.scm
infera/: Cargo.toml
infera-cli/: Cargo.toml
infera-cli/src/: main.rs
infera-core/: Cargo.toml
infera-core/src/: lib.rs
infera-core/src/fol/: ast.rs  mod.rs  rewriter.rs  sexp.rs
infera-core/src/sexp/: ast.rs  cst.rs  emit.rs  mod.rs  parser.rs  result.rs  scanner.rs
infera-proc-macro/: Cargo.toml
infera/src/: lib.rs
src/: lib.rs
src/fol/: ast.rs  mod.rs  rewriter.rs  sexp.rs
src/infera/: cli.py  lang.py  main.py  modus_ponens.py  rewrite.py  sexp.py  tabulate.py  test_sexp.py  util.py
src/sexp/: cst.rs  mod.rs  parser.rs  result.rs  scanner.rs
