[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infera"
version = "0.1.0"
description = "Experiments with formal logic"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[project.scripts]
infera = "infera.cli:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["infera"]
